--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,17 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView
+<androidx.constraintlayout.widget.ConstraintLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardElevation="20dp"
-    app:cardCornerRadius="10dp"
-    android:layout_margin="10dp"
-    android:background="@color/white"
+android:orientation="horizontal"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_marginTop="5dp"
+android:padding="8dp"
+android:layout_centerHorizontal="true"
+android:background="@color/white"
     tools:context=".DetailActivity">
-    <LinearLayout
+    <ImageView
+        android:id="@+id/imgDetail"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:srcCompat="@drawable/ic_launcher_background" />
+
+    <TextView
+        android:id="@+id/nomDetail"
+        android:layout_width="128dp"
+        android:layout_height="27dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="5dp"
+        android:text="name"
+        android:textSize="20dp"
+        app:layout_constraintLeft_toRightOf="@id/imgDetail"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/decDetail"
+        android:layout_width="182dp"
+        android:layout_height="28dp"
+        android:layout_gravity="center"
+        android:text="description"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="40dp"
+        android:textSize="20dp"
+        app:layout_constraintLeft_toRightOf="@id/imgDetail"
+        app:layout_constraintTop_toTopOf="@+id/nomDetail" />
+  <!--  <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -52,5 +85,5 @@ xmlns:tools="http://schemas.android.com/tools"
                 android:text="dec"
                 android:textSize="18dp" />
         </LinearLayout>
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+    </LinearLayout>-->
+</androidx.constraintlayout.widget.ConstraintLayout>
