--- a/app/src/main/res/layout/fragment_favo.xml
+++ b/app/src/main/res/layout/fragment_favo.xml
@@ -1,67 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="20dp"
-    app:cardCornerRadius="10dp"
-    android:layout_margin="10dp"
-    android:background="@color/white"
-    android:id="@+id/container"
-  >
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp">
+    android:layout_marginTop="5dp"
+    android:padding="8dp"
+    android:layout_centerHorizontal="true"
+    android:background="#ccc"
+    android:id="@+id/container" >
+    <ImageView
+        android:id="@+id/imgPilotefav"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:srcCompat="@drawable/ic_launcher_background" />
 
+    <TextView
+        android:id="@+id/nomPilotefav"
+        android:layout_width="128dp"
+        android:layout_height="27dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="5dp"
+        android:text="name"
+        android:textSize="20dp"
+        app:layout_constraintLeft_toRightOf="@id/imgPilotefav"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <ImageView
-            android:id="@+id/imgPilotefav"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginRight="5dp"
-            app:srcCompat="@drawable/ic_launcher_background" />
+    <TextView
+        android:id="@+id/decfavv"
+        android:layout_width="182dp"
+        android:layout_height="28dp"
+        android:layout_gravity="center"
+        android:text="description"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="40dp"
+        android:textSize="20dp"
+        app:layout_constraintLeft_toRightOf="@id/imgPilotefav"
+        app:layout_constraintTop_toTopOf="@+id/nomPilotefav" />
 
-        <LinearLayout
-            android:layout_width="190dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/nomPilotefav"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginLeft="10dp"
-                android:text="John Doe"
-                android:textSize="20dp" />
-
-            <TextView
-                android:id="@+id/decfavv"
-                android:layout_width="190dp"
-                android:layout_height="58dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
-
-                android:text="dec"
-                android:textSize="18dp" />
-        </LinearLayout>
-    <LinearLayout
-        android:layout_width="70dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <Button
+    <Button
         android:id="@+id/btnSupp"
-        android:layout_width="60dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="5dp"
-        android:layout_height="60dp"
-        android:background="@drawable/ic_star"/>
-    </LinearLayout>
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:background="@drawable/ic_star"
+        android:backgroundTint="@color/black"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
