--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">a</string>
+    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">AIzaSyBYfHQKZyDx4Wio-JfZ2aU4qNUEpJU9Flc</string>
 </resources>
