--- a/app/src/main/res/layout/activity_home2.xml
+++ b/app/src/main/res/layout/activity_home2.xml
@@ -14,32 +14,40 @@
         android:layout_marginVertical="10dp"
         android:gravity="center"
         tools:ignore="MissingConstraints">
+
     </RelativeLayout>
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="2"
+        android:weightSum="3"
         app:layout_constraintBottom_toBottomOf="parent">
 
 
-        <Button
+        <ImageButton
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
             android:layout_weight="1"
-            android:background="@color/black"
-            android:text="h" />
+            app:srcCompat="@drawable/ic_baseline_home_24" />
 
-        <Button
+        <ImageButton
             android:id="@+id/favorisBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
             android:layout_weight="1"
-            android:background="@color/black"
-            android:text="Update Profile" />
+            app:srcCompat="@drawable/ic_baseline_favorite_24"/>
+
+        <ImageButton
+            android:id="@+id/imageMap"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_baseline_map_24"
+            tools:ignore="MissingConstraints" />
 
     </LinearLayout>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
