--- a/app/src/main/res/layout/activity_home2.xml
+++ b/app/src/main/res/layout/activity_home2.xml
@@ -9,8 +9,8 @@
 
     <RelativeLayout
         android:id="@+id/fragSpace"
-        android:layout_width="396dp"
-        android:layout_height="583dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
         android:gravity="center"
         tools:ignore="MissingConstraints">
@@ -20,7 +20,8 @@
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="3"
+        android:background="@color/black"
+        android:weightSum="4"
         app:layout_constraintBottom_toBottomOf="parent">
 
 
@@ -44,6 +45,13 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             app:srcCompat="@drawable/ic_baseline_map_24"
+            tools:ignore="MissingConstraints" />
+        <ImageButton
+            android:id="@+id/info_User"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_baseline_account_circle_24"
             tools:ignore="MissingConstraints" />
 
     </LinearLayout>
