--- a/app/src/main/res/layout/fragment_favo.xml
+++ b/app/src/main/res/layout/fragment_favo.xml
@@ -6,40 +6,42 @@ xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
     android:padding="8dp"
     android:layout_centerHorizontal="true"
     android:background="#ccc"
     android:id="@+id/container" >
+
     <ImageView
         android:id="@+id/imgPilotefav"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="87dp"
+        android:layout_height="90dp"
         android:layout_gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_launcher_background" />
 
     <TextView
         android:id="@+id/nomPilotefav"
-        android:layout_width="128dp"
-        android:layout_height="27dp"
+        android:layout_width="166dp"
+        android:layout_height="49dp"
         android:layout_gravity="center"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="5dp"
         android:text="name"
         android:textSize="20dp"
         app:layout_constraintLeft_toRightOf="@id/imgPilotefav"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/decfavv"
-        android:layout_width="182dp"
-        android:layout_height="28dp"
+        android:layout_width="187dp"
+        android:layout_height="69dp"
         android:layout_gravity="center"
-        android:text="description"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="55dp"
+        android:text="description"
         android:textSize="20dp"
         app:layout_constraintLeft_toRightOf="@id/imgPilotefav"
         app:layout_constraintTop_toTopOf="@+id/nomPilotefav" />
@@ -49,7 +51,7 @@ xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_gravity="center"
-        app:srcCompat="@drawable/ic_baseline_favorite_24"
+        app:srcCompat="@drawable/ic_baseline_delete_24"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
